refactor: TileManager